--- a/client/src/componentStyles/video.css
+++ b/client/src/componentStyles/video.css
@@ -1,14 +1,32 @@
+.video-section-container
+{
+    width: 100%;
+    height: 85%;
+    position: relative;
+}
+
+.video-section-wrapper
+{
+    width: 100%;
+    height: 100%;
+    position: relative;
+    display: flex;
+    justify-content: space-between;
+    align-items: center;
+    padding: 5rem;
+}
+
 .video-container
 {
-    width: fit-content;
-    height: fit-content;
+    width: 50%;
+    height: 500px;
     position: relative;
-    background-color: burlywood;
+    background-color: black;
 }
 
 .video-container video
 {
-    width: auto;
-    height: 360px;
+    width: 100%;
+    height: 100%;
 
 }
