--- a/client/src/index.css
+++ b/client/src/index.css
@@ -1,7 +1,12 @@
+@import url('https://fonts.googleapis.com/css2?family=Raleway:wght@100;200;300;400;500;600;700;800;900&display=swap');
+
+
 *,*::before,*::after{
     margin: 0;
     padding: 0;
     scroll-behavior: smooth;
+    font-family: 'Raleway', sans-serif;
+    box-sizing: border-box;
 
 }
 
