--- a/client/src/componentStyles/video.css
+++ b/client/src/componentStyles/video.css
@@ -1,7 +1,7 @@
 .video-section-container
 {
     width: 100%;
-    height: 85%;
+    height: 85.5%;
     position: relative;
 }
 
@@ -13,30 +13,32 @@
     display: flex;
     justify-content: space-between;
     align-items: center;
-    padding: 1rem 5rem;
+    padding: 1rem 2rem;
 }
 
 .video-container
 {
-    width: 50%;
+    width: 48%;
     height: auto;
     position: relative;
     background-color: black;
+    border-radius: 0.5em;
+    overflow: hidden;
+    z-index: 1;
 }
 
 .video-container video
 {
     width: 100%;
     height: 100%;
-
 }
 
 .username-display
 {
     position: absolute;
-    bottom: 0;
+    bottom: 0rem;
     left: 0;
-    width: 80px;
+    width: 25%;
     height: 30px;
     display: grid;
     place-content: center;
@@ -44,4 +46,41 @@
     color: white;
     border: 1px solid #0DC9BB;
     backdrop-filter: opacity(20%);
+    border-left: none;
+    border-bottom: none;
+}
+
+.hidden-text
+{
+    width: 100%;
+    height: 100%;
+    background-color: transparent;
+    font-size: 2.5rem;
+    display: flex;
+    align-items: center;
+    justify-content: center;
+    position: absolute;
+    top: 0;
+    left: 0;
+}
+
+.fol-icon
+{
+    position: absolute;
+    bottom: 0.5rem;
+    right: 0.5rem;
+
+}
+
+
+@media screen and (max-width:681px) {
+    .video-section-wrapper
+    {
+        flex-direction: column;
+    }
+
+    .video-container
+    {
+        width: 100%;
+    }
 }
